@@ -1,120 +1,108 @@
 package com.janboerman.invsee.mojangapi;
 
-import com.janboerman.invsee.utils.UUIDHelper;
+import static com.janboerman.invsee.mojangapi.ResponseUtils.readJSONObject;
+import static com.janboerman.invsee.mojangapi.ResponseUtils.charsetFromHeader;
 
+import java.io.IOException;
 import java.io.InputStream;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.time.Duration;
-import java.util.Objects;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.nio.charset.Charset;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+
+import com.janboerman.invsee.utils.Compat;
+import com.janboerman.invsee.utils.Rethrow;
+import com.janboerman.invsee.utils.UUIDHelper;
 
 import org.json.simple.JSONObject;
 
-import static com.janboerman.invsee.mojangapi.ResponseUtils.*;
-
 public class MojangAPI {
-    //https://wiki.vg/Mojang_API
 
-    private final HttpClient httpClient;
+    private final Executor asyncExecutor;
 
-    /**
-     * Creates the Mojang API instance using the given HTTP client for all requests.
-     * @param httpClient the client to use for HTTP requests
-     */
-    public MojangAPI(HttpClient httpClient) {
-        this.httpClient = Objects.requireNonNull(httpClient);
-    }
-
-    /**
-     * Creates the instance of the Mojang API using {@link HttpClient#newHttpClient()}.
-     */
-    public MojangAPI() {
-        this(HttpClient.newHttpClient());
+    public MojangAPI(Executor asyncExecutor) {
+        this.asyncExecutor = asyncExecutor;
     }
 
     public CompletableFuture<Optional<UUID>> lookupUniqueId(String userName) {
-        CompletableFuture<HttpResponse<InputStream>> future = httpClient.sendAsync(HttpRequest
-                .newBuilder(URI.create("https://api.mojang.com/users/profiles/minecraft/" + userName))
-                .header("Accept", "application/json")
-                .header("User-Agent", "InvSee++/MojangAPI")
-                .timeout(Duration.ofSeconds(5))
-                .build(), HttpResponse.BodyHandlers.ofInputStream());
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                URL url = new URL("https://api.mojang.com/users/profiles/minecraft/" + userName);
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
-        return future.thenApply((HttpResponse<InputStream> response) -> {
-            int statusCode = response.statusCode();
+                connection.setRequestMethod("GET");
+                connection.setConnectTimeout(5 * 1000); //5 seconds
+                connection.setRequestProperty("Accept", "application/json");
+                connection.setRequestProperty("User-Agent", "InvSee++/MojangAPI");
 
-            if (statusCode == 200) {
-                //ok!
-                JSONObject json = readJSONObject(response);
-                String id = (String) json.get("id");
-                UUID uuid = UUIDHelper.dashed(id);
-                return Optional.of(uuid);
+                int statusCode = connection.getResponseCode();
+
+                if (statusCode == HttpURLConnection.HTTP_OK) {
+                    JSONObject json = readJSONObject(connection);
+                    String id = (String) json.get("id");
+                    UUID uuid = UUIDHelper.dashed(id);
+                    return Optional.of(uuid);
+                }
+
+                else {
+                    return handleNotOk(statusCode, connection);
+                }
+
+            } catch (IOException e) {
+                return Rethrow.unchecked(e);
             }
-
-            else {
-                //not ok
-                return handleNotOk(response);
-            }
-        });
+        }, asyncExecutor);
     }
 
     public CompletableFuture<Optional<String>> lookupUserName(UUID uniqueId) {
-        //no longer use name history api: https://wiki.vg/Mojang_API#UUID_to_Name_History_.28Removed.29,
-        //use profile api instead:
-        CompletableFuture<HttpResponse<InputStream>> future = httpClient.sendAsync(HttpRequest
-                .newBuilder(URI.create("https://sessionserver.mojang.com/session/minecraft/profile/" + UUIDHelper.unDashed(uniqueId)))
-                .header("Accept", "application/json")
-                .header("User-Agent", "InvSee++/MojangAPI")
-                .timeout(Duration.ofSeconds(5))
-                .build(), HttpResponse.BodyHandlers.ofInputStream());
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                URL url = new URL("https://sessionserver.mojang.com/session/minecraft/profile/" + UUIDHelper.unDashed(uniqueId));
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
-        return future.thenApply((HttpResponse<InputStream> response) -> {
-           int statusCode = response.statusCode();
+                connection.setRequestMethod("GET");
+                connection.setConnectTimeout(5 * 1000); //5 seconds
+                connection.setRequestProperty("Accept", "application/json");
+                connection.setRequestProperty("User-Agent", "InvSee++/MojangAPI");
 
-           if (statusCode == 200) {
-               //ok!
-               JSONObject profileJson = readJSONObject(response);
-               String userName = (String) profileJson.get("name");
-               return Optional.of(userName);
-           }
+                int statusCode = connection.getResponseCode();
 
-           else {
-               //not ok
-               return handleNotOk(response);
-           }
-        });
+                if (statusCode == HttpURLConnection.HTTP_OK) {
+                    JSONObject profileJson = readJSONObject(connection);
+                    String userName = (String) profileJson.get("name");
+                    return Optional.of(userName);
+                }
+
+                else {
+                    return handleNotOk(statusCode, connection);
+                }
+
+            } catch (IOException e) {
+                return Rethrow.unchecked(e);
+            }
+        }, asyncExecutor);
     }
 
-    private static <T> Optional<T> handleNotOk(HttpResponse<InputStream> response) {
-        int statusCode = response.statusCode();
+    private static <T> Optional<T> handleNotOk(int statusCode, HttpURLConnection connection) throws IOException {
+        assert statusCode == connection.getResponseCode();
 
-        if (statusCode == 204) {
-            //no content - a player with that username does not exist.
-            return handleNoContent(response);
-        }
-
-        else if (statusCode == 400) {
-            //bad request
-            return handleBadRequest(response);
-        }
-
-        else {
-            //unknown response code - undocumented behaviour from mojang's api
-            return handleUnknownStatusCode(response);
+        switch (statusCode) {
+            case ResponseUtils.HTTP_NO_CONTENT: return handleNoContent(connection);
+            case ResponseUtils.HTTP_BAD_REQUEST: return handleBadRequest(connection);
+            case ResponseUtils.HTTP_TOO_MANY_REQUESTS: return handleTooManyRequests(connection);
+            default: return handleUnknownStatusCode(statusCode);
         }
     }
 
-    private static <T> Optional<T> handleNoContent(HttpResponse<InputStream> response) {
+    private static <T> Optional<T> handleNoContent(HttpURLConnection connection) {
         return Optional.empty();
     }
 
-    private static <T> Optional<T> handleBadRequest(HttpResponse<InputStream> response) {
-        JSONObject jsonObject = readJSONObject(response);
+    private static <T> Optional<T> handleBadRequest(HttpURLConnection connection) {
+        JSONObject jsonObject = readJSONObject(connection);
 
         String error = (String) jsonObject.get("error");
         String errorMessage = (String) jsonObject.get("errorMessage");
@@ -122,10 +110,18 @@ public class MojangAPI {
         throw new RuntimeException("We sent a bad request to Mojang. We got a(n) " + error + " with the following message: " + errorMessage);
     }
 
-    private static <T> Optional<T> handleUnknownStatusCode(HttpResponse<InputStream> response) {
-        throw new RuntimeException("Unexpected status code from Mojang API: " + response.statusCode());
+    private static <T> Optional<T> handleTooManyRequests(HttpURLConnection connection) {
+        try (InputStream inputStream = connection.getInputStream()) {
+            byte[] bytes = Compat.readAllBytes(inputStream);
+            Charset charset = charsetFromHeader(connection.getHeaderField("Content-Type"));
+            String errorMessage = new String(bytes, charset);
+            throw new RuntimeException("We were rate limited by Mojang. Error message: " + errorMessage);
+        } catch (IOException e) {
+            throw new RuntimeException("Exception occurred when processing 429 (rate limited) response.", e);
+        }
     }
 
-
-
+    private static <T> Optional<T> handleUnknownStatusCode(int statusCode) {
+        throw new RuntimeException("Unexpected status code from Mojang API: " + statusCode);
+    }
 }
